Implement class to save summaries into database
Modularized the solution to store summaries in the database, preparing for use in constructing the tag system.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 ./docs/log/
 ./data/readme_files/
 ./tests/logs/
-./tests/__pycache__/
 .env*
 ./utils/config.py
 ./utils/var_globals.py
+__pycache__/
