--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,19 @@
 ./docs/log/
-./data/readme_files/
 ./tests/logs/
 .env*
 .venv*
 ./utils/config.py
 ./utils/var_globals.py
-./data/"AI Demo Dashboard.xlsx"
-!logs/*/
-!data/*/
-__pycache__/
 *.pyc
+# Ignore all __pycache__ directories and their contents
+**/__pycache__/
+**/__pycache__/*
 
 # consider to erase this 2 lines
 database/ai_demo_metadata.db
+
+logs/*
+!logs/.gitkeep
+
+data/*
+!data/.gitkeep
